results of IDE (REAL-FM-7)