@@ -2,7 +2,7 @@
 <!--
   ~ Genetic Conflict Seeker
   ~
-  ~ Copyright (c) 2023-2024
+  ~ Copyright (c) 2023-2025
   ~
   ~ @author: Viet-Man Le (vietman.le@ist.tugraz.at)
   -->
@@ -60,6 +60,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-install-plugin</artifactId>
                 <version>3.1.1</version>
+                <configuration>
+                    <groupId>at.tugraz.ist.ase.hiconfit</groupId>
+                    <artifactId>configurator</artifactId>
+                    <version>${hiconfit.version}</version>
+                    <packaging>jar</packaging>
+                    <file>${project.basedir}/lib/configurator-1.0.1-alpha-40.jar</file>
+                    <generatePom>true</generatePom>
+                </configuration>
                 <executions>
                     <execution>
                         <id>install-configurator</id>
@@ -67,14 +75,6 @@
                             <goal>install-file</goal>
                         </goals>
                         <phase>validate</phase>
-                        <configuration>
-                            <groupId>at.tugraz.ist.ase.hiconfit</groupId>
-                            <artifactId>configurator</artifactId>
-                            <version>${hiconfit.version}</version>
-                            <packaging>jar</packaging>
-                            <file>${project.basedir}/lib/configurator-1.0.1-alpha-40.jar</file>
-<!--                            <generatePom>true</generatePom>-->
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -150,8 +150,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>19</source>
-                    <target>19</target>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
